--- a/UI/Client/ClientSupplyOrderDialog.xaml
+++ b/UI/Client/ClientSupplyOrderDialog.xaml
@@ -143,7 +143,7 @@
 						  SelectedValuePath="UserId" DisplayMemberPath="DisplayName" SelectedValue="{Binding Path=ClientSupplyOrder.OrderFilledById}" />
 
 				<TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Final:</TextBlock>
-				<CheckBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" IsChecked="{Binding Path=ClientSupplyOrder.OrderFinal}" />
+				<CheckBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" Name="CheckBoxFinal" VerticalAlignment="Center" IsChecked="{Binding Path=ClientSupplyOrder.OrderFinal}" />
 
 				<TextBlock Grid.Column="6" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >DateSent:</TextBlock>
 				<TextBox Grid.Column="7" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.DateOrderSent, Converter={StaticResource ShortDateTimeConverter}}" />
