--- a/UI/Test/AcidWashResultDialog.xaml
+++ b/UI/Test/AcidWashResultDialog.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Test"
-        Title="Acid Wash Result Dialog" Height="550" Width="550" 
+        Title="Acid Wash Result Dialog" Height="550" Width="700" 
         FontSize="12" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
-    <Grid>
+    <Grid Margin="10,10,10,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
@@ -48,7 +48,7 @@
 
             </Grid>
 
-            <Grid Grid.Column="1" Grid.Row="0">
+            <Grid Grid.Column="1" Grid.Row="0" Margin="5,5,5,5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
