--- a/UI/AppMessaging/MessagingPage.xaml
+++ b/UI/AppMessaging/MessagingPage.xaml
@@ -32,10 +32,10 @@
             <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.MasterAccessionNo}"></TextBox>
 
             <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right">Locked By:</TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.LockedByUserName}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.LockAquiredByUserName}"></TextBox>
 
             <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right">Computer Name:</TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.LockedByComputerName}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.LockAquiredByHostName}"></TextBox>
 
             <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right">Time Lock Aquired:</TextBlock>
             <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.TimeLockAquired}"></TextBox>
