--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -107,7 +107,7 @@
                     <Button Click="ToolBarButtonSendMessage_Click" ToolTip="Send Message" Margin="2,0,0,0" Height="22" Name="ToolBarButtonSendMessage" Visibility="Visible">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="/Resources/message.png"></Image>
-                            <TextBlock Margin="2" VerticalAlignment="Center">Send Message</TextBlock>
+                            <TextBlock Margin="2" VerticalAlignment="Center">Messages</TextBlock>
                         </StackPanel>
                     </Button>
                 
