--- a/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
+++ b/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
@@ -30,10 +30,11 @@
             
             <Border Grid.Row="0" Grid.Column="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>            
 
-            <Grid Name="GridLeftNav"  Grid.Column="0" Margin="10" Width="150">
+            <Grid Name="GridLeftNav"  Grid.Column="0" Margin="10" Width="180">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>                    
                     <RowDefinition Height="Auto"></RowDefinition>                                 
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="20"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -60,55 +61,57 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>                               
 
                 <Button Name="ButtonProviderLookup" Margin="2,2,2,2" Grid.Column="0" Grid.Row="1" Click="HyperLinkShowProviderLookup_Click">Provider Lookup</Button>
-                
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
+
+                <Button Name="ButtonPhysicianNotFound" Margin="2,2,2,2" Grid.Column="0" Grid.Row="2" Click="HyperLinkPhysicianNotFound_Click">Physician/Client Not Found</Button>
+
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkSetDistribution_Click">Set Distribution</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkAddCopyTo_Click">Add Copy To</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkEditDistribution_Click">Edit Distribution</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
+                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkDeleteDistribution_Click">Delete Distribution</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,5">
+                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkPublish_Click">Publish</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,5">
+                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkOpenDocumentFolder_Click">Open Document Folder</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="11" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Schedule Distribution</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="12" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="12" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Schedule Distribution</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkScheduleDistributionImmediate_Click">Immediate</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="14" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkScheduleDistribution15Minute_Click">15 Minutes</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="15" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="16" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkUnScheduleDistribution_Click">Unschedule</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="17" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Add Distribution</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="18" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="18" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Add Distribution</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="19" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkAddMTDOHDistribution_Click">MTDOH</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="19" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="20" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkAddWYDOHDistribution_Click">WYDOH</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="20" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="21" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkAddFaxDistribution_Click">Fax</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="21" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="22" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkAddPrintDistribution_Click">Print</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="22" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                <TextBlock Grid.Column="0" Grid.Row="23" Margin="5,3,0,0" VerticalAlignment="Bottom">
                     <Hyperlink Click="HyperLinkAddComplete_Click">Complete</Hyperlink>
                 </TextBlock>
 
