--- a/UI/Flow/FlowWorkspace.xaml
+++ b/UI/Flow/FlowWorkspace.xaml
@@ -816,7 +816,7 @@
 								Checked="RadioButtonFlowSearch_Checked"
 								Style="{StaticResource RadioButtonStyle}"
 							  GroupName="radioButtonGroupSearch">Report No:</RadioButton>
-							<TextBox Name="textBoxSearchReportNo" Width="100" Visibility="Hidden">16-</TextBox>
+							<TextBox Name="textBoxSearchReportNo" Width="100" Visibility="Hidden" KeyUp="textBoxSearchReportNo_KeyUp">16-</TextBox>
 						</StackPanel>
 						<StackPanel Orientation="Horizontal">
 							<RadioButton Name="radioButtonSearchPatientName"
