--- a/UI/Login/CaseLockedPage.xaml
+++ b/UI/Login/CaseLockedPage.xaml
@@ -6,6 +6,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="700">
   <Grid>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="50"></RowDefinition>
 			<RowDefinition Height="*"></RowDefinition>
@@ -16,12 +21,12 @@
 		<Border Grid.Row="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 		<TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="{Binding Path=PageHeaderText}" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>
 
-		<Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">			            
-            <TextBlock Grid.Row="0" Grid.Column="0" FontSize="26" Text="{Binding Path=PageMessage}"></TextBlock>            
-		</Grid>
+        <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Grid.Row="0" Grid.Column="0" FontSize="26" Text="{Binding Path=PageMessage}"></TextBlock>
+        </Grid>
 
-		<Border Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonOK_Click" Width="200" Height="200" HorizontalAlignment="Right">OK</Button>
+        <Button Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" Click="ButtonAskForLock_Click" Width="200" Height="200" HorizontalAlignment="Right">Ask for Lock</Button>
+        <Button Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Click="ButtonOK_Click" Width="200" Height="200" HorizontalAlignment="Right">OK</Button>
 	</Grid>
   
 </UserControl>
