--- a/UI/AppMessaging/LockRequestPage.xaml
+++ b/UI/AppMessaging/LockRequestPage.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Grid Grid.Column="0" Grid.Row="0">
@@ -30,36 +31,22 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontWeight="Bold">Master AccessionNo:</TextBlock>
-            <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=MasterAccessionNo}"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.MasterAccessionNo}"></TextBlock>
 
             <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontWeight="Bold">Locked By:</TextBlock>
-            <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=LockAquiredByUserName}"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.LockAquiredByUserName}"></TextBlock>
 
             <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontWeight="Bold">Computer Name:</TextBlock>
-            <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=LockAquiredByHostName}"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.LockAquiredByHostName}"></TextBlock>
 
             <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontWeight="Bold">Time Lock Aquired:</TextBlock>
-            <TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=TimeLockAquired}"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Stretch" Text="{Binding Path=AccessionOrder.TimeLockAquired}"></TextBlock>
 
         </Grid>
 
-        <StackPanel Grid.Column="1" Grid.Row="0">
-            <Button Name="ButtonRequest" Width="200" Height="30" Click="ButtonAskToTakeCase_Click" Margin="2,2,2,2" Visibility="Collapsed">Ask for the lock</Button>
-            <Button Name="ButtonTakeIt" Width="200" Height="30" Click="ButtonRespondTakeCase_Click" Margin="2,2,2,2" Visibility="Collapsed">Go ahead and take it</Button>
-            <Button Name="ButtonHoldYourHorses" Width="200" Height="30" Click="ButtonRespondHoldYourHorses_Click" Margin="2,2,2,2" Visibility="Collapsed">Hold your horses</Button>
-        </StackPanel>
-
-        <ListView Name="listViewLinkingList" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=MessageQueues.MessageCollection}">
-            <ListView.View>
-                <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Messages">
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=MessageDate}" Header="Date" Width="150"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Direction}" Header="Direction" Width="100"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=MessageBody.Message}" Header="Message" Width="400"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
-        <Button Grid.Column="1" Grid.Row="2" Width="50" Height="30" Click="ButtonOK_Click" HorizontalAlignment="Right">OK</Button>
+        <Button Name="ButtonRequest" Grid.Column="0" Grid.Row="1" Width="200" Height="200" Click="ButtonAskToTakeCase_Click" Margin="2,2,2,2">Ask for the lock</Button>
+        <Button Grid.Column="1" Grid.Row="2" Width="50" Height="30" Click="ButtonClose_Click" HorizontalAlignment="Right">Close</Button>
+        
         <TextBlock Grid.Column="0" Grid.Row="3" Text="{Binding Path=CountDownMessage}" Foreground="Red" FontSize="14"></TextBlock>
         
     </Grid>
