--- a/UI/AppMessaging/LockRequestReceivedPage.xaml
+++ b/UI/AppMessaging/LockRequestReceivedPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.AppMessaging.LockRequestResponsePage"
+﻿<UserControl x:Class="YellowstonePathology.UI.AppMessaging.LockRequestReceivedPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -46,18 +46,7 @@
         <StackPanel Grid.Column="1" Grid.Row="0">
             <Button Name="ButtonRequest" Width="200" Height="30" Click="ButtonAskToTakeCase_Click" Margin="2,2,2,2" Visibility="Collapsed">Ask for the lock</Button>
             <Button Name="ButtonTakeIt" Width="200" Height="30" Click="ButtonRespondTakeCase_Click" Margin="2,2,2,2" Visibility="Collapsed">Go ahead and take it</Button>
-            <Button Name="ButtonHoldYourHorses" Width="200" Height="30" Click="ButtonRespondHoldYourHorses_Click" Margin="2,2,2,2" Visibility="Collapsed">Hold your horses</Button>
         </StackPanel>
-
-        <ListView Name="listViewLinkingList" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=MessageQueues.MessageCollection}">
-            <ListView.View>
-                <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Messages">
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=MessageDate}" Header="Date" Width="150"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Direction}" Header="Direction" Width="100"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=MessageBody.Message}" Header="Message" Width="400"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
 
         <Button Grid.Column="1" Grid.Row="2" Width="50" Height="30" Click="ButtonOK_Click" HorizontalAlignment="Right">OK</Button>
         <TextBlock Grid.Column="0" Grid.Row="3" Text="{Binding Path=CountDownMessage}" Foreground="Red" FontSize="14"></TextBlock>
