--- a/UI/AppMessaging/LockRequestResponseRecievedPage.xaml
+++ b/UI/AppMessaging/LockRequestResponseRecievedPage.xaml
@@ -6,7 +6,7 @@
 	<Grid Margin="10,10,10,10">
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
