--- a/UI/AppMessaging/LockRequestResponseRecievedPage.xaml
+++ b/UI/AppMessaging/LockRequestResponseRecievedPage.xaml
@@ -14,7 +14,8 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=MessageBody.Message}" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"></TextBlock>
-        <Button Grid.Column="0" Grid.Row="1" Width="200" Height="100" Click="ButtonClose_Click" HorizontalAlignment="Right">Close</Button>
+        <Button Name="ButtonClose"  Grid.Column="0" Grid.Row="1" Width="200" Height="100" Click="ButtonClose_Click" HorizontalAlignment="Right">Close</Button>
+        <Button Name="ButtonNext"  Grid.Column="0" Grid.Row="1" Width="200" Height="100" Click="ButtonNext_Click" HorizontalAlignment="Right">Next</Button>
 
     </Grid>
 </UserControl>
