--- a/UI/Login/CaseLockedPage.xaml
+++ b/UI/Login/CaseLockedPage.xaml
@@ -8,7 +8,7 @@
   <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="50"></RowDefinition>
